Bug 1594949 - Fix assertion of gfx::Path when changing offset-path on some svg frames. r=heycam

1. Use Nothing() for motion path in IncrementScaleResytleCountIfNeeded.
   Since motion path only produces 2d translate and 2d rotate, so it
   shouldn't have any impact on BaseMatrix::ScaleFactors(). We use
   Nothing() to avoid any redundant calculation.
2. Drop SVGTextFrame::DidSetComputedStyle() because
   nsFrame::DidSetComputedStyle() should have handled
   ScheduleReflowSVGNonDisplayText well.
3. Let nsSVGForeignObjectFrame::DidSetComputedStyle() call
   their parents' DidSetComputedStyle. This makes sure we update the frame
   properly.

Differential Revision: https://phabricator.services.mozilla.com/D52290

--HG--
extra : moz-landing-system : lando